refactor: melhora docs
